--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,14 +52,14 @@ theme:
       toggle:
         icon: material/toggle-switch-off-outline
         name: Switch to dark mode
-      primary: teal
+      primary: indigo
       accent: purple
     - scheme: slate
       toggle:
         icon: material/toggle-switch
         name: Switch to light mode
-      primary: teal
-      accent: lime
+      primary: indigo
+      accent: yellow
 extra:
   social:
     - icon: fontawesome/brands/twitter
