--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,23 +1,9 @@
 site_name: 155GISE
 nav:
-  - Charakterisika předmětu: index.md
-  - Cvičení:
-      - Cvičení 1: cviceni/cviceni1.md
-      - Cvičení 2: cviceni/cviceni2.md
-      - Cvičení 3: cviceni/cviceni3.md
-      - Cvičení 4: cviceni/cviceni4.md
-      - Cvičení 5: cviceni/cviceni5.md
-      - Cvičení 6: cviceni/cviceni6.md
-      - Cvičení 7: cviceni/cviceni7.md
-      - Cvičení 8: cviceni/cviceni8.md
-      - Cvičení 9: cviceni/cviceni9.md
-      - Cvičení 10: cviceni/cviceni10.md
-      - Cvičení 11: cviceni/cviceni11.md
-      - Cvičení 12: cviceni/cviceni12.md
-  - Data: data.md
-  - Hodnocení: hodnoceni.md
-  - Semestrální práce: semestralka.md
-  - Výuková videa: videa.md
+  - Couse information: index.md
+  - Practices:
+      - Practice 1: practices/practice1.md
+      - Practice 2: practices/practice2.md
 plugins:
   - search
   - glightbox:
