--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,7 @@ nav:
       - Practical 2: practicals/practical2.md
       - Practical 3: practicals/practical3.md
       - Practical 4: practicals/practical4.md
+      - Practical 5: practicals/practical5.md
   # - Data: data.md
   # - Hodnocení: hodnoceni.md
   # - Semestrální práce: semestralka.md
