Practical No 6 / Geoprocessing

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ nav:
       - Practical 3: practicals/practical3.md
       - Practical 4: practicals/practical4.md
       - Practical 5: practicals/practical5.md
+      - Practical 6: practicals/practical6.md
   # - Data: data.md
   # - Hodnocení: hodnoceni.md
   # - Semestrální práce: semestralka.md
