--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,6 +8,8 @@ nav:
       - Practical 4: practicals/practical4.md
       - Practical 5: practicals/practical5.md
       - Practical 6: practicals/practical6.md
+      - Practical 7: practicals/practical7.md
+      - Practical 8: practicals/practical8.md
   # - Data: data.md
   # - Hodnocení: hodnoceni.md
   # - Semestrální práce: semestralka.md
