--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ nav:
       - Geoprocessing tools for raster data: practicals/practical7.md
       - Data sources, Web map services: practicals/practical8.md
       - Geocoding: practicals/practical9.md
+ - Results: results.md
 plugins:
   - search
   - glightbox:
