nakopírována vybraná cvičení z gis1 and gis2

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,13 +5,13 @@ nav:
       - Introduction to ArcGIS, spatial data, data sources: practicals/Introduction.md
       - Map projections: practicals/MapProjections.md
       - Vector data, attribute queries, spatial queries: practicals/VectorData.md
-      #- Geoprocessing tools, spatial join: practicals/practical6.md
-      #- Join external data, geocoding: practicals/practical5.md
-      #- Raster data, georeferencing: practicals/practica4.md
-      #- Editing nad creating vector data, topology, map layout: practicals/practical7.md
-      #- Terrain analysis, map algebra: practicals/practical7.md
-      #- Data sources, Web map services: practicals/practical8.md
-      #- Geocoding: practicals/practical9.md
+      #- Geoprocessing tools, spatial join: practicals/GeoprocessingTools.md
+      #- Raster data, georeferencing: practicals/Georeferencing_CARTE_EN.md
+      #- Join external data, geocoding: practicals/JoinExternalData.md
+      #- Terrain analysis, map algebra: practicals/TerrainAnalysis.md 
+      #- Editing nad creating vector data, topology, map layout: practicals/CreatingVectorData_EditingTools_GISE_WS2024.md
+      #- Data sources, Web map services: practicals/DataSources_WMS_CultureMile_GISE_WS2024.md
+      #- Geocoding: practicals/Geocoding.md
   - Data sources: DataSources.md
 plugins:
   - search
