--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,7 +8,7 @@ nav:
       - Join external data, spatial join: practicals/JoinExternalData.md
       - Raster data, Georeferencing, Editing and Creating Vector Data: practicals/georeferencing_vectorization.md
       - Geoprocessing tools: practicals/GeoprocessingTools.md
-      #- Terrain analysis, map algebra: practicals/TerrainAnalysis.md 
+      - Terrain analysis, map algebra: practicals/TerrainAnalysis.md 
       #- Editing nad creating vector data, topology, map layout: practicals/CreatingVectorData_EditingTools_GISE_WS2024.md
       #- Data sources, Web map services: practicals/DataSources_WMS_CultureMile_GISE_WS2024.md
       #- Geocoding: practicals/Geocoding.md
@@ -37,7 +37,7 @@ theme:
     annotation: material/plus-circle
   features:
     - navigation.tabs
-    # - navigation.tabs.sticky
+    - navigation.tabs.sticky
     - navigation.sections
     - toc.integrate
     - navigation.top
